; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ti/wlcore/extr_main.c_wl1271_set_band_rate.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ti/wlcore/extr_main.c_wl1271_set_band_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl1271 = type { i32 }
%struct.wl12xx_vif = type { i64, i32, i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wl1271*, %struct.wl12xx_vif*)* @wl1271_set_band_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wl1271_set_band_rate(%struct.wl1271* %0, %struct.wl12xx_vif* %1) #0 {
  %3 = alloca %struct.wl1271*, align 8
  %4 = alloca %struct.wl12xx_vif*, align 8
  store %struct.wl1271* %0, %struct.wl1271** %3, align 8
  store %struct.wl12xx_vif* %1, %struct.wl12xx_vif** %4, align 8
  %5 = load %struct.wl12xx_vif*, %struct.wl12xx_vif** %4, align 8
  %6 = getelementptr inbounds %struct.wl12xx_vif, %struct.wl12xx_vif* %5, i32 0, i32 3
  %7 = load i32*, i32** %6, align 8
  %8 = load %struct.wl12xx_vif*, %struct.wl12xx_vif** %4, align 8
  %9 = getelementptr inbounds %struct.wl12xx_vif, %struct.wl12xx_vif* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = getelementptr inbounds i32, i32* %7, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.wl12xx_vif*, %struct.wl12xx_vif** %4, align 8
  %14 = getelementptr inbounds %struct.wl12xx_vif, %struct.wl12xx_vif* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 8
  %15 = load %struct.wl12xx_vif*, %struct.wl12xx_vif** %4, align 8
  %16 = getelementptr inbounds %struct.wl12xx_vif, %struct.wl12xx_vif* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.wl12xx_vif*, %struct.wl12xx_vif** %4, align 8
  %19 = getelementptr inbounds %struct.wl12xx_vif, %struct.wl12xx_vif* %18, i32 0, i32 2
  store i32 %17, i32* %19, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
